MAGNOLIA-2492 modified page
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@20294 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-mail/src/main/resources/info/magnolia/cms/mail/pages/SendMailPage.html
+++ b/magnolia-module-mail/src/main/resources/info/magnolia/cms/mail/pages/SendMailPage.html
@@ -52,16 +52,7 @@
         </td>
         <td valign="top" >
         <h3>${this.messages.get("page.form.text.message.text")}</h3>
-        <div class="formelement">
-          <label for="type">${this.messages.get("page.form.text.message.emailtype")}</label>
-          <select name="type" >
-            [#list this.types as item]
-              [#if !item?contains("magnolia")]
-              <option >${item}</option>
-              [/#if]
-            [/#list]
-          </select>
-        </div>
+        <input type="hidden" name="type" value="simple" />
         <div class="formelement" >
           <label for="body">${this.messages.get("page.form.text.message.messagetext")}</label>
           <textarea name="body" rows="8" style="width:380px;height:140px"></textarea>
