MAGNOLIA-2504 / MAGNOLIA-2245 : removed DeploymentUtilsPage - moved i18n reload tool to DevelopmentUtilsPage (+ slight improvement of the devutilspages)
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@20384 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/DevelopmentUtilsPage.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/DevelopmentUtilsPage.html
@@ -6,15 +6,27 @@
     <link href="${this.request.contextPath}/.resources/admin-css/admin-all.css" type="text/css" rel="stylesheet" />
   </head>
   <body id="mgnl">
+    [#if message?exists]
+      <pre>${message}</pre>
+      <hr />
+    [/#if]
+    <form act ion="" method="post">
+      <div class="pageframe">
+        <h3>Reload i18n properties files</h3>
+        <div class="formelement">
+          <input type="hidden" name="command" value="reloadI18nMessages"/>
+          <input type="submit" class="mgnlControlButton" value="reload"/>
+        </div>
+      </div>
+    </form>
     <form action="" method="post">
       <div class="pageframe">
+        <h3>Backup</h3>
         <div class="formelement">
           <label for="rootdir">Root dir, relative to webapp</label>
           <input type="text" name="rootdir" value="${this.rootdir}" class="text" />
           <input type="hidden" name="command" value="backup" />
         </div>
-      </div>
-      <div class="pageframe">
         <h3>Standard configuration</h3>
         <div class="formelement">
           <label for="website">Website</label>
@@ -90,9 +102,5 @@
           <input type="submit" value="backupChildren" class="mgnlControlButton" />
         </form>
       </div>
-      [#if message?exists]
-      <hr />
-      <pre>${message}</pre>
-      [/#if]
   </body>
 </html>
