--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/QuickstartPage.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/QuickstartPage.html
@@ -17,11 +17,11 @@
     <div id="header">
         <img src="${contextPath}/.resources/admin-images/signpost.gif" id="signpost"/>
 
-        <h1>Welcome to Magnolia</h1>
+        <h1>You have successfully installed Magnolia!</h1>
     </div>
     <div id="content">
       <p>
-        You do not have any visible templates yet, to start working with Magnolia you need to select one of the following options:
+        Next step: Install templates to define the look & feel and the functionality of your site.
       </p>
 
       <table class="options">
@@ -29,43 +29,42 @@
           <td>
           <div class="option">
             <img src="${contextPath}/.resources/icons/32/box_software.gif" class="instanceLogo"/>
-            <h3>Install Standard Templating Kit Module</h3>
+            <h3>Install the Supersonic Templating Bundle</h3>
             <p>
-              The <em>Magnolia authoring instance</em> is used for editing content. Administrators and editors have to login to this instance's <em>Admin Central</em> for configuring Magnolia and for adding or modifying pages.
+              This download provides you with a production-ready foundation to build your own websites. It is the fastest and most standardized approach to building custom websites.
             </p>
+            <br />
             <ul class="links">
-              <li><a href="/magnoliaAuthor/.magnolia/pages/adminCentral.html">Login to the Admin Central</a><span class="note">*</span> (<a href="/magnoliaAuthor/.magnolia/pages/adminCentral.html" target="_blank">open in new window</a>)</li>
+              <li><a href="http://documentation.magnolia-cms.com/modules.html">Standard Templating Kit Module</a> (<a href="http://documentation.magnolia-cms.com/modules.html" target="_blank">open in new window</a>)</li>
             </ul>
-            <p class="note">Note: the default username/password is superuser/superuser.</p>
             </div>
           </td>
 
           <td >
           <div class="option">
-            <img src="${this.request.contextPath}/.resources/icons/32/folder_add.gif" class="instanceLogo"/>
-            <h3>Start templating</h3>
+            <img src="${contextPath}/.resources/icons/32/folder_add.gif" class="instanceLogo"/>
+            <h3>Learn How to Build Your Own Templates</h3>
             <p>
-              The <em>Magnolia authoring instance</em> is used for editing content. Administrators and editors have to login to this instance's <em>Admin Central</em> for configuring Magnolia and for adding or modifying pages.
+              To learn more about creating your own custom templates, visit our documentation homepage.
             </p>
+            <br />
             <ul class="links">
-            [#if this.admin]
-              <li><a href="javascript:MgnlAdminCentral.showTree('config');">Go to configuration tree</a></li>
-            [#else]
-              <li><a href="/magnoliaAuthor/.magnolia/pages/adminCentral.html">Login to the Admin Central</a><span class="note">*</span> (<a href="/magnoliaAuthor/.magnolia/pages/adminCentral.html" target="_blank">open in new window</a>)</li>
-            [/#if]
+              <li><a href="http://documentation.magnolia-cms.com/userguide/templating.html">Learn more</a><span class="note">*</span> (<a href="http://documentation.magnolia-cms.com/userguide/templating.html" target="_blank">open in new window</a>)</li>
+              [#if !this.admin]
+                <li><a href="${contextPath}/.magnolia/pages/adminCentral.html">Login to the Admin Central</a><span class="note">*</span> (<a href="${contextPath}/.magnolia/pages/adminCentral.html" target="_blank">open in new window</a>)</li>
+              [/#if]
             </ul>
-            <p class="note">Note: you can also get Magnolia Enterprise Edition <a href="http://www.magnolia-cms.com/home/products/enterprise.html" target="_blank">here.</a></p>
             </div>
           </td>
         </tr>
       </table>
       <p>For more information, please see the <a href="http://documentation.magnolia-cms.com/">Magnolia documentation</a>. (<a href="http://documentation.magnolia-cms.com/" target="_blank">open in new window</a>)</p>
-
     </div>
 </div>
 
 <div id="footer">
     <a target="_blank" href="http://www.magnolia-cms.com">Magnolia</a>&trade; Simple Open Source Content Management.
+
 </div>
 
 </body>
