MAGNOLIA-2319 * Added TrueCondition, WarnCondition * Filter dispatchers check is now more lenient: REQUEST and FORWARD are still mandatory, ERROR optional, but any additional dispatcher (typically INCLUDE) only issue a warning. * Slight improvement in the update mechanism ui: progress and messages are not two separate macros, so templates can order them in a more appropriate way (needed for the restart and the stopped templates) * Added tests
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@21593 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-core/src/main/resources/info/magnolia/module/ui/ModuleManagerWebUI.header.html
+++ b/magnolia-core/src/main/resources/info/magnolia/module/ui/ModuleManagerWebUI.header.html
@@ -1,9 +1,9 @@
+[#macro progress]
+<p id="progress"><span class="executedTaskCount">${context.executedTaskCount}</span> tasks have been executed, for a total of <span class="executedTaskCount">${context.totalTaskCount}</span> tasks.</p>
+[/#macro]
 
 [#macro contextMessages]
-<p id="progress"><span class="executedTaskCount">${context.executedTaskCount}</span> tasks have been executed, for a total of <span class="executedTaskCount">${context.totalTaskCount}</span> tasks.</p>
-
 <h2>Messages</h2>
-
 [#list context.messages?keys as module]
 <div class="module">
 <h3>${module}</h3>
