--- a/magnolia-core/src/main/resources/info/magnolia/module/ui/ModuleManagerWebUI.installDoneRestartNeeded.html
+++ b/magnolia-core/src/main/resources/info/magnolia/module/ui/ModuleManagerWebUI.installDoneRestartNeeded.html
@@ -1,7 +1,8 @@
 [#include "ModuleManagerWebUI.header.html" /]
 
 <div id="content">
-<h2>Restart required</h2>
+[@progress /]
+<h2 class="warning">Restart required</h2>
 <p>Magnolia needs to be restarted before it can be used.</p>
 
 [@contextMessages /]
