--- a/magnolia-core/src/main/resources/info/magnolia/module/ui/ModuleManagerWebUI.stoppedConditionsNotMet.html
+++ b/magnolia-core/src/main/resources/info/magnolia/module/ui/ModuleManagerWebUI.stoppedConditionsNotMet.html
@@ -1,7 +1,8 @@
 [#include "ModuleManagerWebUI.header.html" /]
 
 <div id="content">
-<h2>Manual operations required</h2>
+[@progress /]
+<h2 class="warning">Manual operations required</h2>
 <p>Magnolia can't be used until you fix the following :</p>
 
 [@contextMessages /]
