MAGNOLIA-2562 changed url for download stk link
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@21664 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/QuickstartPage.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/QuickstartPage.html
@@ -35,7 +35,7 @@
             </p>
             <br />
             <ul class="links">
-              <li><a href="http://documentation.magnolia-cms.com/modules.html">Standard Templating Kit Module</a> (<a href="http://documentation.magnolia-cms.com/modules.html" target="_blank">open in new window</a>)</li>
+              <li><a href="http://stk.magnolia-cms.com/">Standard Templating Kit Module</a> (<a href="http://stk.magnolia-cms.com/" target="_blank">open in new window</a>)</li>
             </ul>
             </div>
           </td>
