MAGNOLIA-2540 all references to magnolia. info changed to magnolia-cms.com changed in headers, code and poms of 3. 6 branch (only one left is the namespace for nodetypes)
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@21696 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/AdminCentralPage.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/AdminCentralPage.html
@@ -66,7 +66,7 @@
   <body id="mgnl" class="mgnlBgDark mgnlAdminMain">
     <!-- logo -->
     <div>
-    <a href="http://www.magnolia.info" target="_blank">
+    <a href="http://www.magnolia-cms.com" target="_blank">
       <img style="position:absolute; top:17px; left:20px" alt="Magnolia - Simple Open Source Content Management"
         src="${this.request.contextPath}/.resources/admin-images/magnoliaLogo.gif" />
     </a>
@@ -107,10 +107,10 @@
     </div>
     <!-- About -->
     <div id="mgnlAdminCentralFooterDiv" style="position:absolute;text-align:center;" class="mgnlText">
-      <a href="http://www.magnolia.info" target="_blank">Magnolia</a>
+      <a href="http://www.magnolia-cms.com" target="_blank">Magnolia</a>
       &trade; Simple Open Source Content Management. ${this.versionString} -
-      <a href="http://jira.magnolia.info" target="_blank">${this.messages.get("central.bugFeatureRequest")}</a> -
-      <a href="http://documentation.magnolia.info" target="_blank">${this.messages.get("central.documentation")}</a>
+      <a href="http://jira.magnolia-cms.com" target="_blank">${this.messages.get("central.bugFeatureRequest")}</a> -
+      <a href="http://documentation.magnolia-cms.com" target="_blank">${this.messages.get("central.documentation")}</a>
     </div>
   </body>
 </html>
