--- a/magnolia-module-admininterface/src/main/resources/mgnl-resources/loginForm/login.html
+++ b/magnolia-module-admininterface/src/main/resources/mgnl-resources/loginForm/login.html
@@ -45,13 +45,13 @@
     </div>
     <div id="footer">
       &copy; Copyright 2003-2008
-      <a href="http://www.magnolia.info" id="externallink">Magnolia International Ltd.</a>
+      <a href="http://www.magnolia-cms.com" id="externallink">Magnolia International Ltd.</a>
        -
       Maiengasse 30, 4056 Basel, Switzerland
        <br/>
       Tel +41 61 228 9000 (9AM-5PM GMT+1)
        -
-      <a href="mailto:info@magnolia.info">info@magnolia.info</a>
+      <a href="mailto:info@magnolia-cms.com">info@magnolia-cms.com</a>
       <br/>
       Magnolia is a registered trademark of Magnolia International Ltd.
     </div>
