--- a/magnolia-core/src/main/resources/info/magnolia/module/ui/ModuleManagerWebUI.footer.html
+++ b/magnolia-core/src/main/resources/info/magnolia/module/ui/ModuleManagerWebUI.footer.html
@@ -2,7 +2,7 @@
 </div>
 
 <div id="footer">
-<a target="_blank" href="http://www.magnolia.info">Magnolia</a>&trade; Simple Open Source Content Management.
+<a target="_blank" href="http://www.magnolia-cms.com">Magnolia</a>&trade; Simple Open Source Content Management.
 </div>
 
 </body>
