MAGNOLIA-1821 MAGNOLIA-2585 system properties displayed in config info page are now sorted
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@21777 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/ConfigurationPage.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/ConfigurationPage.html
@@ -22,7 +22,7 @@
       </tr>
         [/#comment]
       <tr>
-        <td>Is admin server</td>
+        <td>Is admin server: </td>
         <td>${this.server.isAdmin()?string}</td>
       </tr>
     </table>
