--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/QuickstartPage.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/QuickstartPage.html
@@ -16,7 +16,6 @@
 <div class="page">
     <div id="header">
         <img src="${contextPath}/.resources/admin-images/signpost.gif" id="signpost"/>
-
         <h1>You have successfully installed Magnolia!</h1>
     </div>
     <div id="content">
@@ -24,10 +23,8 @@
         Next step: Install templates to define the look & feel and the functionality of your site.
       </p>
 
-      <table class="options">
-        <tr >
-          <td>
-          <div class="option">
+      <div class="options">
+        <div class="option" id="stk">
             <img src="${contextPath}/.resources/icons/32/box_software.gif" class="instanceLogo"/>
             <h3>Install the Supersonic Templating Bundle</h3>
             <p>
@@ -37,27 +34,26 @@
             <ul class="links">
               <li><a href="http://stk.magnolia-cms.com/">Standard Templating Kit Module</a> (<a href="http://stk.magnolia-cms.com/" target="_blank">open in new window</a>)</li>
             </ul>
-            </div>
-          </td>
+        </div>
 
-          <td >
-          <div class="option">
+        <div class="option" id="templates">
             <img src="${contextPath}/.resources/icons/32/folder_add.gif" class="instanceLogo"/>
             <h3>Learn How to Build Your Own Templates</h3>
             <p>
               To learn more about creating your own custom templates, visit our documentation homepage.
+              <br />&nbsp;
             </p>
             <br />
             <ul class="links">
-              <li><a href="http://documentation.magnolia-cms.com/userguide/templating.html">Learn more</a><span class="note">*</span> (<a href="http://documentation.magnolia-cms.com/userguide/templating.html" target="_blank">open in new window</a>)</li>
+              <li><a href="http://documentation.magnolia-cms.com/userguide/templating.html">Learn more</a> (<a href="http://documentation.magnolia-cms.com/userguide/templating.html" target="_blank">open in new window</a>)</li>
               [#if !this.admin]
-                <li><a href="${contextPath}/.magnolia/pages/adminCentral.html">Login to the Admin Central</a><span class="note">*</span> (<a href="${contextPath}/.magnolia/pages/adminCentral.html" target="_blank">open in new window</a>)</li>
+                <li><a href="${contextPath}/.magnolia/pages/adminCentral.html">Login to the Admin Central</a> (<a href="${contextPath}/.magnolia/pages/adminCentral.html" target="_blank">open in new window</a>)</li>
               [/#if]
             </ul>
-            </div>
-          </td>
-        </tr>
-      </table>
+        </div>
+         <br style="clear: both;"/>
+       </div>
+
       <p>For more information, please see the <a href="http://documentation.magnolia-cms.com/">Magnolia documentation</a>. (<a href="http://documentation.magnolia-cms.com/" target="_blank">open in new window</a>)</p>
     </div>
 </div>
