MAGNOLIA-2614 added target top  to links so they open covering the ui
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@22213 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/QuickstartPage.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/QuickstartPage.html
@@ -32,7 +32,7 @@
             </p>
             <br />
             <ul class="links">
-              <li><a href="http://stk.magnolia-cms.com/">Standard Templating Kit Module</a> (<a href="http://stk.magnolia-cms.com/" target="_blank">open in new window</a>)</li>
+              <li><a href="http://stk.magnolia-cms.com/" target="_top" >Standard Templating Kit Module</a> (<a href="http://stk.magnolia-cms.com/" target="_blank">open in new window</a>)</li>
             </ul>
         </div>
 
@@ -45,7 +45,7 @@
             </p>
             <br />
             <ul class="links">
-              <li><a href="http://documentation.magnolia-cms.com/userguide/templating.html">Learn more</a> (<a href="http://documentation.magnolia-cms.com/userguide/templating.html" target="_blank">open in new window</a>)</li>
+              <li><a href="http://documentation.magnolia-cms.com/userguide/templating.html"  target="_top" >Learn more</a> (<a href="http://documentation.magnolia-cms.com/userguide/templating.html" target="_blank">open in new window</a>)</li>
               [#if !this.admin]
                 <li><a href="${contextPath}/.magnolia/pages/adminCentral.html">Login to the Admin Central</a> (<a href="${contextPath}/.magnolia/pages/adminCentral.html" target="_blank">open in new window</a>)</li>
               [/#if]
@@ -54,7 +54,7 @@
          <br style="clear: both;"/>
        </div>
 
-      <p>For more information, please see the <a href="http://documentation.magnolia-cms.com/">Magnolia documentation</a>. (<a href="http://documentation.magnolia-cms.com/" target="_blank">open in new window</a>)</p>
+      <p>For more information, please see the <a href="http://documentation.magnolia-cms.com/" target="_top" >Magnolia documentation</a>. (<a href="http://documentation.magnolia-cms.com/" target="_blank">open in new window</a>)</p>
     </div>
 </div>
 
