MAGNOLIA-2692 Don't block admin interface when user node is not available internally.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@24418 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/AdminCentralPage.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/AdminCentralPage.html
@@ -77,7 +77,13 @@
       <form action="" method="post" style="padding: 0; margin: 0;">
         <div>
         <input type="hidden" name="mgnlLogout" value="true"/>
-        ${this.messages.get("central.user")}: <span onclick="mgnlOpenDialog('${this.user.userNode.@handle}','','','','users','.magnolia/dialogs/userpreferences.html')" style=" font-size: 11px; color: black; border: 0; background: transparent; outline: invert none 0; cursor: pointer; padding: 0; margin: 0;" onmouseover="this.style.textDecoration = 'underline';" onmouseout="this.style.textDecoration = 'none';">${this.user.name}</span> |
+        ${this.messages.get("central.user")}: 
+        [#if this.userNode?exists]
+          <span onclick="mgnlOpenDialog('${this.userNode.@handle}','','','','users','.magnolia/dialogs/userpreferences.html')" style=" font-size: 11px; color: black; border: 0; background: transparent; outline: invert none 0; cursor: pointer; padding: 0; margin: 0;" onmouseover="this.style.textDecoration = 'underline';" onmouseout="this.style.textDecoration = 'none';">${this.user.name}</span>
+        [#else]
+          ${this.user.name}
+        [/#if]
+         |
         <input type="submit" name="logout" value="${this.messages.get('central.logout')?html}" style="font-size: 11px; border: 0; background: transparent; outline: invert none 0; cursor: pointer; padding: 0; margin: 0:" onmouseover="this.style.textDecoration = 'underline';" onmouseout="this.style.textDecoration = 'none';"/>
         </div>
       </form>
