MAGNOLIA-2654 explicitely using the "px" unit when resizing list and tree items/colums and a few other places
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@26340 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/lists/AbstractList.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/lists/AbstractList.html
@@ -22,8 +22,9 @@
                 var height = MgnlDHTMLUtil.getWindowSize().h;
                 var width = MgnlDHTMLUtil.getWindowSize().w;
                 if(functionBar){
-                    $('${this.list.name}Div').style.height = height - MgnlDHTMLUtil.getHeight(functionBar) + "px";
-                    functionBar.style.top=height - MgnlDHTMLUtil.getHeight(functionBar);
+                    var functionBarHeight = MgnlDHTMLUtil.getHeight(functionBar);
+                    $('${this.list.name}Div').style.height = (height - functionBarHeight) + "px";
+                    functionBar.style.top=(height - functionBarHeight) + "px";
                 }
                 else{
                     $('${this.list.name}Div').style.height = height + "px";
