--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/QuickstartPage.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/QuickstartPage.html
@@ -45,7 +45,7 @@
             </p>
             <br />
             <ul class="links">
-              <li><a href="http://documentation.magnolia-cms.com/userguide/templating.html"  target="_top" >Learn more</a> (<a href="http://documentation.magnolia-cms.com/userguide/templating.html" target="_blank">open in new window</a>)</li>
+                <li><a href="http://templating.magnolia-cms.com"  target="_top" >Learn more</a> (<a href="http://templating.magnolia-cms.com" target="_blank">open in new window</a>)</li>
               [#if !this.admin]
                 <li><a href="${contextPath}/.magnolia/pages/adminCentral.html">Login to the Admin Central</a> (<a href="${contextPath}/.magnolia/pages/adminCentral.html" target="_blank">open in new window</a>)</li>
               [/#if]
