* MAGNOLIA-2924 fixed link to http://templating.magnolia-cms.com * cleaned up html, removed unnecessary <br> tags. If space is needed, use the css. * indentation
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@29052 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/QuickstartPage.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/QuickstartPage.html
@@ -19,18 +19,14 @@
         <h1>You have successfully installed Magnolia!</h1>
     </div>
     <div id="content">
-      <p>
-        Next step: Install templates to define the look & feel and the functionality of your site.
-      </p>
+      <p>Next step: Install templates to define the look &amp; feel and the functionality of your site.</p>
 
       <div class="options">
         <div class="option" id="stk">
             <img src="${contextPath}/.resources/icons/32/box_software.gif" class="instanceLogo"/>
             <h3>Install the Supersonic Templating Bundle</h3>
-            <p>
-              This download provides you with a production-ready foundation to build your own websites. It is the fastest and most standardized approach to building custom websites.
-            </p>
-            <br />
+            <p>This download provides you with a production-ready foundation to build your own websites.
+               It is the fastest and most standardized approach to building custom websites.</p>
             <ul class="links">
               <li><a href="http://stk.magnolia-cms.com/" target="_top" >Standard Templating Kit Module</a> (<a href="http://stk.magnolia-cms.com/" target="_blank">open in new window</a>)</li>
             </ul>
@@ -39,20 +35,16 @@
         <div class="option" id="templates">
             <img src="${contextPath}/.resources/icons/32/folder_add.gif" class="instanceLogo"/>
             <h3>Learn How to Build Your Own Templates</h3>
-            <p>
-              To learn more about creating your own custom templates, visit our documentation homepage.
-              <br />&nbsp;
-            </p>
-            <br />
+            <p>To learn more about creating your own custom templates, visit our documentation homepage.</p>
             <ul class="links">
-              <li><a href="http://documentation.magnolia-cms.com/userguide/templating.html"  target="_top" >Learn more</a> (<a href="http://documentation.magnolia-cms.com/userguide/templating.html" target="_blank">open in new window</a>)</li>
+              <li><a href="http://templating.magnolia-cms.com"  target="_top" >Learn more</a> (<a href="http://templating.magnolia-cms.com" target="_blank">open in new window</a>)</li>
               [#if !this.admin]
                 <li><a href="${contextPath}/.magnolia/pages/adminCentral.html">Login to the Admin Central</a> (<a href="${contextPath}/.magnolia/pages/adminCentral.html" target="_blank">open in new window</a>)</li>
               [/#if]
             </ul>
         </div>
-         <br style="clear: both;"/>
-       </div>
+        <br style="clear: both;"/>
+      </div>
 
       <p>For more information, please see the <a href="http://documentation.magnolia-cms.com/" target="_top" >Magnolia documentation</a>. (<a href="http://documentation.magnolia-cms.com/" target="_blank">open in new window</a>)</p>
     </div>
