flexible height, aligned links, and restored spacing after removing superfluous <br> tags with r29052
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@29054 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/QuickstartPage.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/QuickstartPage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link href="${this.request.contextPath}/.resources/admin-css/admin-all.css" type="text/css" rel="stylesheet" />
@@ -15,7 +15,7 @@
 
 <div class="page">
     <div id="header">
-        <img src="${contextPath}/.resources/admin-images/signpost.gif" id="signpost"/>
+        <img src="${contextPath}/.resources/admin-images/signpost.gif" id="signpost" alt=""/>
         <h1>You have successfully installed Magnolia!</h1>
     </div>
     <div id="content">
@@ -23,7 +23,7 @@
 
       <div class="options">
         <div class="option" id="stk">
-            <img src="${contextPath}/.resources/icons/32/box_software.gif" class="instanceLogo"/>
+            <img src="${contextPath}/.resources/icons/32/box_software.gif" class="instanceLogo" alt=""/>
             <h3>Install the Supersonic Templating Bundle</h3>
             <p>This download provides you with a production-ready foundation to build your own websites.
                It is the fastest and most standardized approach to building custom websites.</p>
@@ -33,7 +33,7 @@
         </div>
 
         <div class="option" id="templates">
-            <img src="${contextPath}/.resources/icons/32/folder_add.gif" class="instanceLogo"/>
+            <img src="${contextPath}/.resources/icons/32/folder_add.gif" class="instanceLogo" alt=""/>
             <h3>Learn How to Build Your Own Templates</h3>
             <p>To learn more about creating your own custom templates, visit our documentation homepage.</p>
             <ul class="links">
