MAGNOLIA-2993 getting there with the FreeMarker directives; JSP Tags still need to be impl
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@31949 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-templating-ui-components/src/main/java/info/magnolia/templatinguicomponents/package.html
+++ b/magnolia-templating-ui-components/src/main/java/info/magnolia/templatinguicomponents/package.html
@@ -1,7 +1,8 @@
 <html>
 <body>
 This package provides simple, independent components to be used by templating engines to render Authoring UI components.
-It also provides default, simple, Freemarker directives and a JSP TagLib which expose these components to these templating
+It also provides default, simple, Freemarker directives and a JSP TagLib which expose these components to these
+templating
 engines.
 </body>
 </html>
