MAGNOLIA-2993 cleanup and javadoc; also added support for TemplateCollectionModel where directive parameters are converted in List<String>
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@32285 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-templating-ui-components/src/main/java/info/magnolia/templatinguicomponents/package.html
+++ b/magnolia-templating-ui-components/src/main/java/info/magnolia/templatinguicomponents/package.html
@@ -2,7 +2,6 @@
 <body>
 This package provides simple, independent components to be used by templating engines to render Authoring UI components.
 It also provides default, simple, Freemarker directives and a JSP TagLib which expose these components to these
-templating
-engines.
+templating engines.
 </body>
 </html>
