MAGNOLIA-3124: - all dialog input values are passed to the workflow by default - dates are transformed to a openwfe friendly string format - acivation dialogs changed: startDate and endDate
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@32623 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-workflow/src/main/resources/info/magnolia/module/workflow/pages/WorkflowUtilPage.html
+++ b/magnolia-module-workflow/src/main/resources/info/magnolia/module/workflow/pages/WorkflowUtilPage.html
@@ -23,9 +23,9 @@
     </div>
     <div class="pageframe">
       <h3>Flow upload</h3>
-      <form action="" method="post">
+      <form action="${contextPath}${ctx.aggregationState.originalURI}" method="post">
         <input type="hidden" name="command" value="upload" />
-        <textArea cols="80" rows="10" name="flow"><!-- the name of the definition will get used as the upload name--></textArea>
+        <textArea cols="80" rows="20" name="flow">${this.flow}</textArea>
         <br />
         <input type="submit" value="upload"></input>
       </form>
@@ -53,7 +53,7 @@
     -->
     <div class="pageframe">
       <h3>Launch flow</h3>
-      <form action="" method="get">
+      <form action="${contextPath}${ctx.aggregationState.originalURI}" method="post">
         <input type="hidden" name="command" value="launchFlow" />
         Flow name:
         <select name="flowName">
